katars/tests/snaps/snapshots/snap_errors__undefined_variable.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"let x = y\")"
---
Error: undefined variable 'y'
   ╭─[<test>:1:9]
   │
 1 │ let x = y
   │         ┬  
   │         ╰── undefined variable 'y'
   │ 
   │ Help: check the spelling, or define 'y' with 'let'
───╯
